2. Local-Variable Type Inference[#234903]