@@ -2,7 +2,6 @@ package ru.job4j.lambda;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.is;
@@ -13,7 +12,7 @@ public class DiapasonFunctionTest {
     public void whenLinearFunctionThenLinearResults() {
         DiapasonFunction rsl = new DiapasonFunction();
         List<Double> result = rsl.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         assertThat(result, is(expected));
     }
 
@@ -21,7 +20,7 @@ public class DiapasonFunctionTest {
     public void whenQuadraticsFunctionThenQuadraticsResults() {
         DiapasonFunction rsl = new DiapasonFunction();
         List<Double> result = rsl.diapason(5, 8, x -> x * x + 1);
-        List<Double> expected = Arrays.asList(26D, 37D, 50D);
+        List<Double> expected = List.of(26D, 37D, 50D);
         assertThat(result, is(expected));
     }
 
@@ -29,7 +28,7 @@ public class DiapasonFunctionTest {
     public void whenLogarithmicFunctionThenLogarithmicResults() {
         DiapasonFunction rsl = new DiapasonFunction();
         List<Double> result = rsl.diapason(3, 5, Math::log);
-        List<Double> expected = Arrays.asList(1.0986122886681098D, 1.3862943611198906D);
+        List<Double> expected = List.of(1.0986122886681098D, 1.3862943611198906D);
         assertThat(result, is(expected));
     }
 }
